--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/solid-js": "^1.2.3",
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.6.12",
+    "solid-js": "^1.6.2",
     "tailwindcss": "^3.2.4"
   }
 }
