--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "astro": "^1.6.12",
     "solid-js": "^1.6.2",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8"
   }
 }
