--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/solid-js": "^1.2.3",
     "@astrojs/tailwind": "^2.1.3",
     "astro": "^1.6.12",
+    "date-fns": "^2.29.3",
     "solid-js": "^1.6.2",
     "tailwindcss": "^3.2.4"
   },
